--- a/app/src/main/res/layout/fragment_client_connect.xml
+++ b/app/src/main/res/layout/fragment_client_connect.xml
@@ -35,6 +35,7 @@
 
     <Button
         android:id="@+id/joinChat"
+        android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/connect" />
