Chat fragment now receives serializable object

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,5 +39,9 @@
         android:id="@+id/chatFragment"
         android:name="com.alexparra.chatapp.fragments.ChatFragment"
         android:label="fragment_chat"
-        tools:layout="@layout/fragment_chat" />
+        tools:layout="@layout/fragment_chat" >
+        <argument
+            android:name="connection"
+            app:argType="com.alexparra.chatapp.models.Chat" />
+    </fragment>
 </navigation>
