--- a/app/src/main/res/layout/fragment_server_connect.xml
+++ b/app/src/main/res/layout/fragment_server_connect.xml
@@ -35,6 +35,7 @@
         tools:text="192.168.0.1" />
 
     <Button
+        android:id="@+id/createServer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
