adapter and chat fragment changes

--- a/app/src/main/res/layout/chat_row_item.xml
+++ b/app/src/main/res/layout/chat_row_item.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_gravity="top | center"
+    android:id="@+id/chatLayout">
 
     <TextView
         android:id="@+id/chat_row_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:text="username"/>
     <TextView
         android:id="@+id/chat_row_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="2dp"
         android:text="chat row message"/>
     <TextView
         android:id="@+id/chat_row_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="10dp"
+        android:textStyle="italic"
         android:text="da/ta/data" />
 </LinearLayout>
