--- a/app/src/main/res/layout/chat_row_item.xml
+++ b/app/src/main/res/layout/chat_row_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="top | center"
+    android:padding="3dp"
     android:id="@+id/chatLayout">
 
     <TextView
@@ -16,7 +17,7 @@
         android:id="@+id/chat_row_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp"
+        android:paddingBottom="2dp"
         android:text="chat row message"/>
     <TextView
         android:id="@+id/chat_row_data"
