--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="10dp"
-    android:layout_marginTop="10dp"
-    android:background="">
+    android:layout_marginTop="10dp" >
 
     <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/chatRecycler"
@@ -40,8 +39,6 @@
             android:id="@+id/messageField"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/background_et"
-            android:alpha="0.8f"
             android:hint="@string/insert_message"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guideline"
