--- a/app/src/main/res/layout/receive_chat_row_item.xml
+++ b/app/src/main/res/layout/receive_chat_row_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_gravity="top | center"
+    android:gravity="right"
     android:padding="3dp"
     android:id="@+id/chatLayout">
 
