new viewholder types

--- a/app/src/main/res/layout/send_chat_row_item.xml
+++ b/app/src/main/res/layout/send_chat_row_item.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="left"
-    android:padding="3dp"
-    android:id="@+id/chatLayout">
+    android:padding="3dp">
 
     <TextView
         android:id="@+id/chat_row_username"
