date format and layouts

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:id="@+id/clientButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="10dp"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
@@ -38,6 +39,7 @@
         android:id="@+id/serverButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingEnd="10dp"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
