--- a/app/src/main/res/drawable/text_box_shape.xml
+++ b/app/src/main/res/drawable/text_box_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:radius="20dp" />
-    <solid
-        android:color="@color/gray" />
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/background_et" />
+    <corners android:radius="60dp" />
 </shape>
