--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginTop="10dp">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineH"
@@ -16,6 +14,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chatRecycler"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
@@ -29,8 +29,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/messageBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_height="0dp"
+        android:background="@color/background_et"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +47,9 @@
             android:id="@+id/messageField"
             android:layout_width="0dp"
             android:layout_height="40dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
             android:hint="@string/insert_message"
-            android:background="@drawable/text_box_shape"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guideline"
             app:layout_constraintHorizontal_bias="0.0"
