--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background_et">#EDEAEA</color>
+    <color name="background_et">#F1EFEF</color>
     <color name="gray">#474747</color>
 </resources>
