--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background_et">#F1EFEF</color>
     <color name="gray">#474747</color>
+    <color name="blue">#17B0ED</color>
 </resources>
