--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -37,6 +37,7 @@
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_vibrate"
+            android:layout_marginStart="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/messageField"
             app:layout_constraintTop_toTopOf="parent"
