--- a/app/src/main/res/layout/chat_row_item.xml
+++ b/app/src/main/res/layout/chat_row_item.xml
@@ -8,33 +8,45 @@
     android:padding="3dp"
     android:id="@+id/rowLayout">
 
-    <TextView
-        android:id="@+id/chat_row_username"
+    <LinearLayout
+        android:id="@+id/messageBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        tools:text="username" />
+        android:orientation="vertical"
+        android:gravity="end"
+        android:paddingHorizontal="15dp"
+        android:background="@drawable/chat_background">
 
-    <ImageView
-        android:id="@+id/angry_face"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:visibility="gone"
-        android:src="@drawable/ic_vibrate"/>
+        <TextView
+            android:id="@+id/chat_row_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            tools:text="username" />
 
-    <TextView
-        android:id="@+id/chat_row_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="2dp"
-        tools:text="chat row message" />
+        <ImageView
+            android:id="@+id/angry_face"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:visibility="gone"
+            android:src="@drawable/ic_vibrate"/>
 
-    <TextView
-        android:id="@+id/chat_row_data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="italic"
-        tools:ignore="SmallSp"
-        tools:text="da/ta/data"
-        tools:textSize="10sp" />
+        <TextView
+            android:id="@+id/chat_row_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="2dp"
+            tools:text="chat row message" />
+
+        <TextView
+            android:id="@+id/chat_row_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="italic"
+            tools:ignore="SmallSp"
+            tools:text="da/ta/data"
+            tools:textSize="10sp" />
+    </LinearLayout>
+
+
 </LinearLayout>
