--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,9 @@
     <color name="send_username">#1A58E9</color>
     <color name="receive_username">#E91A1A</color>
     <color name="event_username">#1B1B1B</color>
-    <color name="receive_chat_bg">#FDE0E0</color>
-    <color name="send_chat_bg">#E0EFFD</color>
-    <color name="event_chat_bg">#E6E6E6</color>
+    <color name="soft_red_bg">#FDE0E0</color>
+    <color name="soft_blue_bg">#E0EFFD</color>
+    <color name="soft_grey_bg">#E6E6E6</color>
     <color name="gray">#474747</color>
     <color name="blue">#17B0ED</color>
 </resources>
