--- a/app/src/main/res/drawable/receive_chat_bg.xml
+++ b/app/src/main/res/drawable/receive_chat_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/receive_chat_bg" />
+    <solid android:color="@color/soft_red_bg" />
     <corners
         android:topLeftRadius="50dp"
         android:topRightRadius="50dp"
