--- a/app/src/main/res/layout/fragment_server_connect.xml
+++ b/app/src/main/res/layout/fragment_server_connect.xml
@@ -39,7 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="25dp"
-        android:text="@string/create_server" />
+        android:text="@string/create_server"
+        android:background="@drawable/buttons_bg_selector"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
