--- a/app/src/main/res/layout/fragment_server_connect.xml
+++ b/app/src/main/res/layout/fragment_server_connect.xml
@@ -8,6 +8,11 @@
     android:orientation="vertical"
     tools:context=".fragments.ServerConnectFragment">
 
+    <ImageView
+        android:id="@+id/idQrcode"
+        android:layout_width="300dp"
+        android:layout_height="300dp"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +25,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/your_ip"
         android:textAlignment="center"
         android:textSize="18sp" />
@@ -29,7 +34,6 @@
         android:id="@+id/ipAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:textAlignment="center"
         android:textSize="20sp"
         tools:text="192.168.0.1" />
