--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -53,7 +53,7 @@
         <EditText
             android:id="@+id/messageField"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:hint="@string/insert_message"
             app:layout_constraintStart_toEndOf="@id/btn_vibrate"
