--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="soft_grey_bg">#E6E6E6</color>
     <color name="gray">#474747</color>
     <color name="blue">#17B0ED</color>
+    <color name="cell">#EAF0FF</color>
 </resources>
