--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -31,14 +31,28 @@
 
         <ImageView
             android:id="@+id/btn_vibrate"
+            android:src="@drawable/ic_vibrate"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginStart="10dp"
             android:layout_gravity="center"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/ic_vibrate"
-            android:layout_marginStart="10dp"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_tictactoe"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageView
+            android:id="@+id/btn_tictactoe"
+            android:src="@drawable/ic_x"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintStart_toEndOf="@id/btn_vibrate"
             app:layout_constraintEnd_toStartOf="@id/messageField"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -56,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:hint="@string/insert_message"
-            app:layout_constraintStart_toEndOf="@id/btn_vibrate"
+            app:layout_constraintStart_toEndOf="@id/btn_tictactoe"
             app:layout_constraintEnd_toStartOf="@id/guideline"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -64,12 +78,12 @@
 
         <ImageView
             android:id="@+id/sendButton"
+            android:src="@drawable/ic_send"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/ic_send"
             app:layout_constraintStart_toEndOf="@id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
