--- a/app/src/main/res/layout/fragment_table.xml
+++ b/app/src/main/res/layout/fragment_table.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".tictactoe.activities.TableFragment">
+    tools:context=".tictactoe.activities.TableFragment"
+    >
 
     <TextView
         android:id="@+id/turn"
@@ -25,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/homeRecycler"
+        android:id="@+id/tableRecycler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
