rename tictactoe things

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <include layout="@layout/fragment_table" />
+        <include layout="@layout/fragment_tictactoe" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
