Changed chat fragment receive type
Type mismatched from previous version

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,7 +46,7 @@
         tools:layout="@layout/fragment_chat" >
         <argument
             android:name="user"
-            app:argType="com.alexparra.chatapp.models.UserType" />
+            app:argType="com.psandroidlabs.chatapp.models.UserType" />
     </fragment>
     <fragment
         android:id="@+id/tictactoe"
