Added fragment name

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -50,7 +50,7 @@
     </fragment>
     <fragment
         android:id="@+id/tictactoe"
-        android:name="com.psandroidlabs.chatapp.tictactoe.fragments.TictactoeFragment"
+        android:name="com.psandroidlabs.chatapp.tictactoe.fragments.TicTacToeFragment"
         android:label="tictactoe"
         tools:layout="@layout/fragment_tictactoe">
 
